@@ -3,6 +3,6 @@ DIST hexen2source-1.4.3.tgz 2173736 RMD160 fd60113c5a6e6406ae21fdc13fa1704103f9e
 DIST hexen2source-1.4.4-pre4.tgz 2327143 RMD160 4f56fcf2f1cac59689e5fad8d7b0d5507ed68f42 SHA1 7b4a177579acde8888f181dcd4e3b855c2d04eac SHA256 10ec0c18b2ac36e2e2bc336ef7ec0f8c2f1acbd3df39687ac079f10f4b23f3ee
 DIST hexenworld-pakfiles-0.15.tgz 4948641 RMD160 bbc3d2368b01d60accf457b42f9ed5d247f94d1b SHA1 a7600b80b4205788b64fb57191e194c28b55b522 SHA256 49462cdf984deee7350d03c7d192d1c34d682647ffc9d06de4308e0a7c71c4d9
 EBUILD uhexen2-1.4.3.ebuild 12815 RMD160 179002c8860860cad875553a5a45612477ae0fa2 SHA1 c7c8be31f46a06f28bc00babad853c794016dd03 SHA256 768deb1e3c618f3e4ecf09f06871464f273a64afbf919970fd700e49289e1ba9
-EBUILD uhexen2-1.4.4_pre4.ebuild 12341 RMD160 f5c5fd490655878b114c99c27decba1e858a118f SHA1 15240e505f91849aa95734b0178162ff0b6bd0f4 SHA256 28937b9feabfdc9976c24c076eedc6cb55c62dcfd4aef63c0dff03bb2f414308
-MISC ChangeLog 2860 RMD160 185b5868fa25c1e35aca975a2be439dbdbd78d08 SHA1 beb6484666d559ae673288f3e797ff7a8ff89d7d SHA256 e1121691d2b5124127a186284c3bbc1fb0fb85e8cc5d8e1ebfa1cd8550de2fd3
+EBUILD uhexen2-1.4.4_pre4.ebuild 12314 RMD160 5235d0078d8c683a1db31086a7130025d48a8fc4 SHA1 1a027c4be68a784cbd350ec38af8c161956b7e3f SHA256 8e3532605dcd04eb22ddee427272c6ce693172b6d59612bbd98fcb0057e1faa5
+MISC ChangeLog 2997 RMD160 abf0bb1a742eb04b459e35eeda79f517195a29bf SHA1 745b4d24340da29752b9d5301e0826282674aa9e SHA256 f2ead0f894029a08ef78cc8edacbb42e2394d12f1a747bdeab5918ae3460e778
 MISC metadata.xml 1145 RMD160 de493008e9d152ce14f697a699c76c2b26a27f0f SHA1 141679fce22f9ade0526683fd3f0c9a3d45affb6 SHA256 21538f19a45e5c7aa5de068e825448a82c41da477576529d2b7bda8b672a761c
