@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  uhexen2-1.4.4_pre4.ebuild:
+  Drop default pkg_config and add die statement
+
   18 Jan 2009; Davide Cendron (scen) <scen@gentoo.org>
   uhexen2-1.4.4_pre4.ebuild:
   Little cleanup
